--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,14 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Ignores files of varying extensions
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
 *.rar
+*.tar
+*.zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
