Made a build.gradle and SimpleTest.java. Did steps 1-9 and ran fine.

--- a/lab02/build.gradle
+++ b/lab02/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'java'
+	id 'java'
     id 'application'
 }
-
 application {
-    mainClassName = 'SimpleTest'
+    mainClassName = 'main/java/SimpleTest'
 }
