--- a/lab02/build.gradle
+++ b/lab02/build.gradle
@@ -1,13 +1,12 @@
-plugins {
-	id 'java'
-    id 'application'
-}
-application {
-    mainClassName = 'src/main/java/SimpleTest'
-}
+apply plugin:'java'
+apply plugin:'application'
+
 repositories{
     mavenCentral()
 }
+
 dependencies{
     implementation 'org.apache.commons:commons-csv:1.8'
 }
+
+mainClassName = 'csci2020u.lab02.SimpleTest'
